--- a/index.html
+++ b/index.html
@@ -10,24 +10,7 @@
 	<div id="div1">
 	<p >0</p>
 	<p >1</p>
-<script type="text/javascript">
-	var num1=0;
-	var num2=1;	
-	//document.getElementById('num1').innerHTML=num1;
-	//document.getElementById('num2').innerHTML=num2;
-	function clickHere(){
-		let cont=num2;
-		num2=num2+num1;
-		num1=cont;	
-		//document.getElementById('num1').innerHTML=num1;
-		//document.getElementById('num2').innerHTML=num2;
-		var para = document.createElement("p");
-		var node = document.createTextNode(num2);
-		para.appendChild(node);
-		var element = document.getElementById("div1");
-		element.appendChild(para);
-	}
-</script>
+		<script type="text/javascript" src="script.js"></script>
 </div>
 </body>
 </html>
