--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 	<title>Counter Application</title>
 </head>
 <body>
-	<h1>Welcome to my Counter Application</h1>
+	<div id="out">
+	<h1 id="h1">Welcome to my Counter Application</h1>
 
 	<button type="submit" onClick="clickHere()">Click here</button>
 	<div id="div1">
@@ -12,5 +13,6 @@
 	<p >1</p>
 		<script type="text/javascript" src="script.js"></script>
 </div>
+	</div>
 </body>
 </html>
