--- a/index.html
+++ b/index.html
@@ -1,19 +1,21 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Counter Application</title>
-	<link rel="stylesheet" href="style.css">
+  <title>Counter Application</title>
+  <link rel="stylesheet" type="text/css"  href="style.css">
 </head>
 <body>
-	<div id="out">
-	<h1 id="h1">Welcome to my Counter Application</h1>
-
-	<button type="submit" onClick="clickHere()">Click here</button>
-	<div id="div1">
-	<p >0</p>
-	<p >1</p>
-		<script type="text/javascript" src="script.js"></script>
-</div>
-	</div>
+  <div id="out">
+    <h1 id="h1">Welcome to my Fibonnaci Sequence Application</h1>
+    </div>
+    <div class="wrap">
+    <button type="submit" onClick="clickHere()" class="button">Click here</button>
+    </div>
+    <div id="div1" class="div1">
+    <p >0</p>
+    <p >1</p>
+      <script type="text/javascript" src="script.js"></script>
+    
+  </div>
 </body>
 </html>
